--- a/style.css
+++ b/style.css
@@ -3,58 +3,10 @@ body{
     background: red;
     color:black;
     background-image: url("https://www.google.com/imgres?q=image%20de%20bruno%20mars&imgurl=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1576667634736562177%2FdjUXXBEI_400x400.jpg&imgrefurl=https%3A%2F%2Ftwitter.com%2Fbrunomars&docid=IjQULRnr9pXYZM&tbnid=jmaomZyDqHcTCM&vet=12ahUKEwjfsa-_2LWJAxVRTaQEHbXHJRgQM3oECFkQAA..i&w=399&h=399&hcb=2&ved=2ahUKEwjfsa-_2LWJAxVRTaQEHbXHJRgQM3oECFkQAA");
-    
-    
 
 }
 
-h1{
-color:black;
-font-size: 2em;
-text-underline-position: auto;
-
-
-
-
-}
-
-
-
-
-h2{
-    color:black
-    ;
-}
-
-ol{
-
-    background: white;
-    color: black;
-    padding: 50px;
-   border-radius: 5;
-
-}
-
-img {width: 400px;
-height: 400px;
-margin: auto;}
-
-DIV{text-align: center;}
-
-background-image:{"
-    }
-
-
-    @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap");
-
-header {
-  background-image: url('https://rllngr.github.io/La-Toile-Jukebox-Code-Makers/assets/header.svg');
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 250px;
-}
-
+/* Navigation */
 nav {
   font-family: "Poppins", sans-serif;
   background: white;
@@ -85,6 +37,58 @@ nav a {
 nav a:hover {
   color: #e2001a;
 }
+
+/* Titre 24K Magic */
+h1{
+color:black;
+font-size: 2em;
+text-underline-position: auto;
+}
+
+/* Titre Bruno Mars */
+h2{
+ color:black;
+}
+
+/* Bloque avec Liste des titres avec liens youtube*/
+ol{
+  display: flex;
+  background: beige;
+  color: black;
+  padding: 50px;
+  border-radius:32px;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+/* Titres de l'album 24K Magic non soulignés */
+a{
+  color: black;
+  text-decoration: none;
+  transition: all .3s ease-in-out;
+}
+
+img {width: 400px;
+height: 400px;
+margin: auto;}
+
+DIV{text-align: center;}
+
+background-image:{"
+    }
+
+
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap");
+
+header {
+  background-image: url('https://rllngr.github.io/La-Toile-Jukebox-Code-Makers/assets/header.svg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 250px;
+}
+
+
 
 footer {
   background: #e2001a;
