--- a/style.css
+++ b/style.css
@@ -41,6 +41,24 @@ nav a:hover {
 }
 
 
+#header {
+  display: flex;
+  gap: 16px;
+  width: 100%;
+}
+
+#image {
+  width: 50%;
+  height: 100%;
+}
+
+#text {
+  padding: 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 header {
   background-image: url('https://rllngr.github.io/La-Toile-Jukebox-Code-Makers/assets/header.svg');
   background-size: cover;
@@ -54,13 +72,16 @@ header {
 /* Titre 24K Magic */
 h1{
 color:black;
-font-size: 2em;
-text-underline-position: auto;
+font-size: 7.2vw;
+line-height: normal;
+margin: 0;
+text-transform: uppercase;
 }
 
 /* Titre Bruno Mars */
 h2{
  color:black;
+ 
 }
 
 /* Bloque avec Liste des titres avec liens youtube*/
@@ -81,6 +102,7 @@ a{
   transition: all .3s ease-in-out;
 }
 
+/* Taille des images des albums de Bruno Mars */
 img {width: 400px;
 height: 400px;
 margin: auto;}
